// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
    . Total of: 
    $2.00
  </h1>
</div>
`;

exports[`Should render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses
    . Total of: 
    $40,000,000.00
  </h1>
</div>
`;
